--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
-dependencies = [
-    "zarr<3",
-    "pydantic>2.0.0"
-    ]
+dependencies = ["zarr>=3", "pydantic>2.0.0"]
 
 [project.urls]
 Documentation = "https://zarr.dev/pydantic-zarr/"
@@ -194,7 +191,9 @@ addopts = [
     "--durations=10", "-ra", "--strict-config", "--strict-markers",
 ]
 filterwarnings = [
-    "error"
+    "error",
+    # https://github.com/zarr-developers/zarr-python/issues/2948
+    "ignore:The `order` keyword argument has no effect for Zarr format 3 arrays:RuntimeWarning",
 ]
 
 [tool.repo-review]
