--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
-dependencies = ["zarr>=3", "pydantic>2.0.0"]
+dependencies = [
+    "zarr@git+https://github.com/zarr-developers/zarr-python.git@main",
+    "pydantic>2.0.0",
+]
 
 [project.urls]
 Documentation = "https://zarr.dev/pydantic-zarr/"
@@ -48,6 +51,9 @@ docs = [
 [tool.hatch]
 version.source = "vcs"
 build.hooks.vcs.version-file = "src/pydantic_zarr/_version.py"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.envs.test]
 features = ["test"]
